# esports-manager

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  Pipfile  README.md  esm.py  main.py  run.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: esm-tests.yml
docs/: README.md  roadmap.md
docs/gdd/: README.md  pickban.epgz
esm/: definitions.py  esm.py  main.py
esm/core/: champion.py  championship.py  core.py  db.py  esm.py  esmcore.py  game_manager.py  game_session.py  gamestate.py  hashfile.py  load_game.py  match.py  match_live.py  new_game.py  player.py  save_game.py  settings.py  team.py
esm/resources/: __init__.py
esm/tests/: __init__.py  conftest.py  test_champions.py  test_db.py  test_events.py  test_generate_champions.py  test_generate_players.py  test_generate_teams.py  test_load_save.py  test_match.py  test_players.py  test_settings.py  test_skill.py
esm/ui/: __init__.py  gui.py  gui_components.py  guicontroller.py  igamecontroller.py  input_handler.py  view.py
src/: __init__.py  definitions.py  main.py  test.md
src/core/: __init__,py  __init__.py  champion.py  championship.py  core.py  db.py  event.py  gui.py  match.py  match_live.py  mod.rs  patch.py  player.py  pre_match.py  team.py  test_gui.py  testmatch.py
src/gui/: index.css  index.html  index.js  package-lock.json  package.json  test.html
tests/: test_file.py  test_generate_champions.py  test_generate_players.py  test_main.py  test_match.py  test_matchlive.py  test_player.py  test_prematch.py  test_team.py  test_utils.py
(+227 files in other folders)
